# irtsp-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  depth_snapshot.py  imu_to_csv.py  live_pose_trace.py  print_all.py  validate_device.py
irtsp/: __init__.py  aio.py  audio.py  clock.py  discovery.py  records.py  session.py  video.py  wire.py
tests/: mockserver.py  test_aio.py  test_android_compat.py  test_audio.py  test_clock.py  test_records.py  test_session.py  test_wire.py
tests/fixtures/: android_handshake.json
